Complete rewrite to use CSC protocol